--- a/src/components/Experience/styles.scss
+++ b/src/components/Experience/styles.scss
@@ -42,6 +42,7 @@
 
     p {
       line-height: 1.6;
+      text-align: justify;
     }
 
     .location {
@@ -53,6 +54,7 @@
     .description {
       white-space: pre-line;
       line-height: 1.6;
+      text-align: justify;
     }
   }
 }
