Update website content

--- a/src/components/Hero/styles.scss
+++ b/src/components/Hero/styles.scss
@@ -35,6 +35,7 @@
       font-size: 1.2rem;
       margin-bottom: $spacing-lg;
       animation: fadeInUp 1s ease 0.4s;
+      text-align: center;
     }
 
     .cta-button {
